# mtctl-pelco

./: .gitignore  CMakeLists.txt  README.md
inc/: command.h  serial.h
src/: command.c  main.c  serial.c
