cmake_minimum_required(VERSION 3.10)
project (mtctl VERSION 1.0)
message(${CMAKE_PROJECT_NAME})
set(CMAKE_VERBOSE_MAKEFILE true)
include_directories(./inc)
set(SRC_PATH ./src)
set(SRC_FILES ${SRC_PATH}/main.c ${SRC_PATH}/command.c ${SRC_PATH}/serial.c)
add_executable(mtctl ${SRC_FILES})
# target_link_libraries(mtctl pthread)